[tool.poetry]
name = "chargebacks_web"
version = "0.1.0"
description = ""
authors = ["Gustavo de Paula"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.3"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
