[tool.poetry]
name = "chargebacks_web"
version = "0.1.0"
description = ""
authors = ["Gustavo de Paula"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.3"
psycopg2-binary = "^2.9.3"
kafka-python = "^2.0.2"
pytest-django = "^4.5.2"

# [tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[pytest]
DJANGO_SETTINGS_MODULE = "test.settings"
python_files = "tests.py test_*.py *_tests.py"
